--- a/app/src/main/res/layout/adapter_main_item.xml
+++ b/app/src/main/res/layout/adapter_main_item.xml
@@ -16,9 +16,9 @@
         android:id="@+id/tv_main_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="6dp"
-        android:layout_toRightOf="@+id/iv_main_avatar"
+        android:layout_toEndOf="@+id/iv_main_avatar"
         android:text="name"/>
 
     <TextView
@@ -26,9 +26,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_main_name"
-        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
-        android:layout_toRightOf="@+id/iv_main_avatar"
+        android:layout_toEndOf="@+id/iv_main_avatar"
         android:text="date"
         android:textSize="14sp"/>
 
@@ -39,5 +39,29 @@
         android:layout_below="@+id/iv_main_avatar"
         android:layout_marginTop="7dp"
         android:padding="3dp"
-        android:text="date"/>
+        android:text="content"/>
+
+    <RelativeLayout
+        android:id="@+id/rl_main_retweet"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_main_content"
+        android:layout_marginTop="5dp"
+        android:background="#EEEEEE"
+        android:padding="6dp">
+
+        <TextView
+            android:id="@+id/tv_main_retweet_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="name"/>
+
+        <TextView
+            android:id="@+id/tv_main_retweet"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_main_retweet_name"
+            android:layout_marginTop="7dp"
+            android:text="retweet"/>
+    </RelativeLayout>
 </RelativeLayout>
