--- a/app/src/main/res/layout/adapter_main_item.xml
+++ b/app/src/main/res/layout/adapter_main_item.xml
@@ -5,7 +5,7 @@
                 android:orientation="vertical"
                 android:padding="15dp">
 
-    <ImageView
+    <com.unixtrong.anbo.view.AvatarImageView
         android:id="@+id/iv_main_avatar"
         android:layout_width="40dp"
         android:layout_height="40dp"
