--- a/app/src/main/res/layout/layout_feed_body.xml
+++ b/app/src/main/res/layout/layout_feed_body.xml
@@ -3,7 +3,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-    <com.unixtrong.anbo.view.AvatarImageView
+    <com.unixtrong.anbo.view.AvatarView
         android:id="@+id/iv_main_avatar"
         android:layout_width="40dp"
         android:layout_height="40dp"
