--- a/app/src/main/res/drawable/shape_feed_divider.xml
+++ b/app/src/main/res/drawable/shape_feed_divider.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle">
     <size android:height="7dp"/>
-    <solid android:color="#50e6e6fa"/>
+    <solid android:color="@color/border"/>
 </shape>
