--- a/app/src/main/res/layout/adapter_main_item.xml
+++ b/app/src/main/res/layout/adapter_main_item.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="name"
-            android:textColor="#4383a0"
+            android:textColor="@color/linkText"
             android:textSize="15sp"/>
 
         <TextView
@@ -32,6 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv_main_retweet_name"
             android:layout_marginTop="7dp"
+            android:lineSpacingMultiplier="1.3"
             android:text="retweet"
             android:textSize="15sp"/>
     </RelativeLayout>
