--- a/app/src/main/res/layout/layout_feed_body.xml
+++ b/app/src/main/res/layout/layout_feed_body.xml
@@ -38,6 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/iv_main_avatar"
+        android:lineSpacingMultiplier="1.3"
         android:paddingTop="10dp"
         android:text="content"
         android:textColor="#000000"
