feat(main): support to display the retweet pic

--- a/app/src/main/res/layout/adapter_main_item_retweet_multi_pics.xml
+++ b/app/src/main/res/layout/adapter_main_item_retweet_multi_pics.xml
@@ -19,8 +19,16 @@
         android:padding="@dimen/retweet_padding">
 
         <include
+            android:id="@+id/include_retweet_body"
             layout="@layout/layout_retweet_body"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+
+        <com.unixtrong.anbo.view.MultiPicLayout
+            android:id="@+id/mpl_main_pics"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/include_retweet_body"
+            android:layout_marginTop="10dp"/>
     </RelativeLayout>
 </LinearLayout>
