--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,13 +35,14 @@
 
             <TextView
                 android:id="@+id/tv_main_message"
-                android:layout_width="65dp"
+                android:layout_width="70dp"
                 android:layout_height="match_parent"
                 android:layout_centerInParent="true"
                 android:gravity="center"
                 android:text="消息"
                 android:textColor="@color/black"
-                android:textSize="15sp"/>
+                android:textSize="15sp"
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/tv_main_home"
@@ -51,7 +52,8 @@
                 android:gravity="center"
                 android:text="首页"
                 android:textColor="@color/black"
-                android:textSize="15sp"/>
+                android:textSize="15sp"
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/tv_main_discover"
@@ -61,7 +63,8 @@
                 android:gravity="center"
                 android:text="发现"
                 android:textColor="@color/black"
-                android:textSize="15sp"/>
+                android:textSize="15sp"
+                android:textStyle="bold"/>
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
 
