--- a/app/src/main/res/layout/layout_feed_body.xml
+++ b/app/src/main/res/layout/layout_feed_body.xml
@@ -18,6 +18,7 @@
         android:layout_alignTop="@+id/iv_main_avatar"
         android:layout_marginStart="10dp"
         android:layout_toEndOf="@+id/iv_main_avatar"
+        android:textStyle="bold"
         android:text="name"
         android:textColor="#000000"
         android:textSize="15sp"/>
