--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
 
     <color name="border">#50E6E6FA</color>
     <color name="linkText">#3f7daf</color>
+    <color name="highLightText">#3f8fff</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
 </resources>
