--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,8 +6,9 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_main_feeds"
-        android:background="@color/white"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:scrollbars="vertical"/>
 
 </FrameLayout>
